frameit: readme