@@ -2,414 +2,128 @@
 
 This is the server component of the [FrameIT project](https://kwarc.info/systems/frameit/), primarily maintained so far by [@ComFreek](https://github.com/ComFreek).
 
-## Installation
+## Installation & Compilation
 
-1. Get a set of UFrameIT archives you want the server to use: `git clone --recursive https://github.com/UFrameIT/archives archive-root`
+See [./installation.md](./installation.md).
 
-   Remember the path you clone this to!
+## Public REST API
 
-2. Clone the MMT repository on devel branch: `git clone --branch devel https://github.com/UniFormal/mmt`
+- <details><summary>Fact reference JSON format (shared by endpoints below)</summary>
 
-3. Import the source code into a new IntelliJ project: see <https://uniformal.github.io//doc/setup/devel#using-intellij>
+    ```javascript
+    {"uri": /* some uri */}
+    ```
+    
+    Format only given for informational purposes, the game engine should treat fact reference objects opaquely.
+    Do not depend on their internal structure.
 
-4. Open the just created IntelliJ project and locate `src -> frameit-mmt -> src -> info.kwarc.mmt.frameit.communication.Server` in the project browser and run it via the green triangle: 
+  </details>
 
-   ![Project browser showing `info.kwarc.mmt.frameit.communication.Server`](https://i.imgur.com/J75FzWa.png)
-  
-   This will invoke compilation and execution of the server in that order. Compilation hopefully works. See below when you get a stack overflow error *at compilation*. Execution is supposed to result in an error since the server expects some command-line arguments upon execution. We will add them next.
+-<details><summary>Fact JSON format (shared by endpoints below)</summary>
 
-5. Edit the `Server` run configuration
-
-   - first open all run configurations:
-  
-     ![run configurations](https://i.imgur.com/nFd8ETr.png)
-
-   - edit the `Server` configuration by adding `-bind :8085 -archive-root <path to archive root>` to its program arguments:
-  
-     ![program arguments](https://i.imgur.com/lZahL6C.png)
-     
-   - for debugging, add the `-debug` there, too. Upon server start, instead of an empty situation theory, this will use a pre-filled situation theory within the `FrameIT/frameworld` archive.
-
-6. Rerun the server via the run configuration dropdown (left to green triangle in IntelliJ's menu band)
-
-   The server should now be running. The initial console output should be
-
-   ```
-   "C:\Program Files (x86)\OpenJDK\jdk-14.0.1\bin\java.exe" [...] info.kwarc.mmt.frameit.communication.Server
-
-   SLF4J: Failed to load class "org.slf4j.impl.StaticLoggerBinder".
-   SLF4J: Defaulting to no-operation (NOP) logger implementation
-   SLF4J: See http://www.slf4j.org/codes.html#StaticLoggerBinder for further details.
-
-   WARNING: An illegal reflective access operation has occurred
-   WARNING: Illegal reflective access by com.twitter.jvm.Hotspot (file:/C:/Users/nroux/Desktop/mmt/src/null/Coursier/cache/v1/https/repo1.maven.org/maven2/com/twitter/util-jvm_2.12/20.7.0/util-jvm_2.12-20.7.0.jar) to field sun.management.ManagementFactoryHelper.jvm
-   WARNING: Please consider reporting this to the maintainers of com.twitter.jvm.Hotspot
-   WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
-   WARNING: All illegal access operations will be denied in a future release
-   ```
-   
-   Don't worry. The first warning is ignorable &mdash; log output is just discarded. The secone one is Twitter's to fix and is under their investigation already (for months, sadly).
-
-**You're done.** The server should now be available at `http://localhost:8085` and respond to the REST API calls detailled below.
-
-As a first test, you can try opening <http://localhost:8085/debug/situationtheory/print>. It should output something like
-
-```
-"\ntheory SituationTheory : http://mathhub.info/FrameIT/frameworld?FactCollection  = \n❚"
-```
-
-## Stack overflow error when compiling
-
-The Scala compiler sometimes (unreproducibly) runs into stackoverflow errors when compiling, concretely, when typechecking. Try updating to the latest IntelliJ version. Apart from that, the Internet does not offer many tips for solving this except increasing the stack size for compilation:
-
-- <https://github.com/scala-js/scala-js/issues/3588>
-- <https://github.com/scala/bug/issues/9696>
-
-Not sure if it helped in my case or the error just randomly disappeared.
-
-## REST API
-
-```
-POST /archive/build-light
-  no payload
-POST /archive/build
-  no payload
-
-POST /fact/add
-  payload variant a: {"label": "some label", "kind": "general", "tp": OMDoc JSON term, "df": OMDoc JSON term or null or left out}
-
-  payload variant b: {"label": "some label", "kind": "veq", "lhs": OMDoc JSON term, "value": OMF OMDoc JSON term}
-
-  return: {"uri": uri to created fact}
-
-GET /fact/list
-  no payload
-  return: [
-    {
-        "uri": uri to fact,
+    - variant a: general facts:
+    
+      ```javascript
+      {
+        "ref": /* fact reference */
         "label": "some label",
-        
-        // EITHER of general kind
-        "kind": "general", 
-        "tp": OMDoc JSON term,
-        "df": OMDoc JSON term,
+        "kind": "general",
+        "tp": /* OMDoc JSON term */,
+        "df": /* OMDoc JSON term or null or left out */
+      }
+      ```
 
-        // OR of "value eq" kind
+    - variant b: veq facts
+    
+      ```javascript
+      {
+        "ref": /* fact reference */
+        "label": "some label",
         "kind": "veq",
-        "lhs": OMDoc JSON term,
-        "value": OMDoc JSON term,
-        "proof": OMDoc JSON term
-    },
-    ... // more facts of same structure
-  ]
+        "lhs":   /* OMDoc JSON term */,
+        "value": /* OMF OmDoc JSON term */
+      }
+      ```
 
-GET /scroll/list
-  [{
-      "problemTheory": "http://mathhub.info/FrameIT/frameworld?OppositeLen/OppositeLen_Problem",
-      "solutionTheory": "http://mathhub.info/FrameIT/frameworld?OppositeLen/OppositeLen_Solution",
-      "label": "OppositeLen",
-      "description": "Given a triangle ABC right angled at C, the distance AB can be computed from the angle at B and the distance BC",
-      "requiredFacts": [
-          // same format as returned by /fact/list
-          // with the exception that for "veq" facts the "value" and "proof" fields are not given
-          // (which makes sense given that they need to be filled by scroll application after all)
-      ]
-    }, /* more scrolls */]
+  </details>
 
-POST /scroll/apply
-  {
-    "scroll": {
-      "problemTheory": "uri to problem theory",
-      "solutionTheory": "uri to solution theory",
-    },
-    "assignments": [
-        [{"uri": "<uri to required fact in problem theory>", OMDoc JSON term /* the assignment */],
-        /* more assignments */
-    ]
-  }
-  return: list of new facts (i.e., those received via scroll application by means of a pushout). See /fact/list for the format.
+- <details><summary>Scroll reference JSON format (shared by endpoints below)</summary>
 
-POST /scroll/check
-  {
-    "scroll": {
-      "problemTheory": "uri to problem theory",
-      "solutionTheory": "uri to solution theory",
-    },
-    "assignments": [
-      ["uri to fact", OMDoc JSON term]
-    ]
-  }
-  return: ??? yet unspecified
-
-POST /scroll/try-complete
-  {
-    "scroll": {
-      "problemTheory": "uri to problem theory",
-      "solutionTheory": "uri to solution theory",
-    },
-    "assignments": [
-      ["uri to fact", OMDoc JSON term]
-    ]
-  }
-  return: ??? yet unspecified
-
-GET debug/situationtheory/print
-  no payload
-  return: string of MMT surface syntax (not to be parsed; debugging only!)
-```
-
-## Sample output for `scroll/list`
-
-```
-[
+    ```javascript
     {
-        "problemTheory": "http://mathhub.info/FrameIT/frameworld?OppositeLen_Problem",
-        "solutionTheory": "http://mathhub.info/FrameIT/frameworld?OppositeLen_Solution",
-        "label": "OppositeLen",
-        "description": "Given a triangle ABC right angled at C, the distance AB can be computed from the angle at B and the distance BC",
-        "requiredFacts": [
-            {
-                "uri": "http://mathhub.info/FrameIT/frameworld?OppositeLen_Problem?pA",
-                "label": "pA",
-                "tp": {
-                    "original": {
-                        "uri": "http://mathhub.info/MitM/core/geometry?3DGeometry?point",
-                        "kind": "OMS"
-                    },
-                    "simplified": {
-                        "uri": "http://mathhub.info/MitM/core/geometry?3DGeometry?point",
-                        "kind": "OMS"
-                    }
-                },
-                "df": null
-            },
-            {
-                "uri": "http://mathhub.info/FrameIT/frameworld?OppositeLen_Problem?pB",
-                "label": "pB",
-                "tp": {
-                    "original": {
-                        "uri": "http://mathhub.info/MitM/core/geometry?3DGeometry?point",
-                        "kind": "OMS"
-                    },
-                    "simplified": {
-                        "uri": "http://mathhub.info/MitM/core/geometry?3DGeometry?point",
-                        "kind": "OMS"
-                    }
-                },
-                "df": null
-            },
-            {
-                "uri": "http://mathhub.info/FrameIT/frameworld?OppositeLen_Problem?pC",
-                "label": "pC",
-                "tp": {
-                    "original": {
-                        "uri": "http://mathhub.info/MitM/core/geometry?3DGeometry?point",
-                        "kind": "OMS"
-                    },
-                    "simplified": {
-                        "uri": "http://mathhub.info/MitM/core/geometry?3DGeometry?point",
-                        "kind": "OMS"
-                    }
-                },
-                "df": null
-            },
-            {
-                "uri": "http://mathhub.info/FrameIT/frameworld?OppositeLen_Problem?pdistBC_v",
-                "label": "pdistBC_v",
-                "tp": {
-                    "original": {
-                        "uri": "http://mathhub.info/MitM/Foundation?RealLiterals?real_lit",
-                        "kind": "OMS"
-                    },
-                    "simplified": {
-                        "uri": "http://mathhub.info/MitM/Foundation?RealLiterals?real_lit",
-                        "kind": "OMS"
-                    }
-                },
-                "df": null
-            },
-            {
-                "uri": "http://mathhub.info/FrameIT/frameworld?OppositeLen_Problem?pdistBC",
-                "label": "pdistBC",
-                "tp": {
-                    "original": {
-                        "applicant": {
-                            "uri": "http://mathhub.info/FrameIT/frameworld?DistanceFact?distanceFact",
-                            "kind": "OMS"
-                        },
-                        "arguments": [
-                            {
-                                "uri": "http://mathhub.info/FrameIT/frameworld?OppositeLen_Problem?pB",
-                                "kind": "OMS"
-                            },
-                            {
-                                "uri": "http://mathhub.info/FrameIT/frameworld?OppositeLen_Problem?pC",
-                                "kind": "OMS"
-                            },
-                            {
-                                "uri": "http://mathhub.info/FrameIT/frameworld?OppositeLen_Problem?pdistBC_v",
-                                "kind": "OMS"
-                            }
-                        ],
-                        "kind": "OMA"
-                    },
-                    "simplified": {
-                        "applicant": {
-                            "uri": "http://mathhub.info/FrameIT/frameworld?DistanceFact?distanceFact",
-                            "kind": "OMS"
-                        },
-                        "arguments": [
-                            {
-                                "uri": "http://mathhub.info/FrameIT/frameworld?OppositeLen_Problem?pB",
-                                "kind": "OMS"
-                            },
-                            {
-                                "uri": "http://mathhub.info/FrameIT/frameworld?OppositeLen_Problem?pC",
-                                "kind": "OMS"
-                            },
-                            {
-                                "uri": "http://mathhub.info/FrameIT/frameworld?OppositeLen_Problem?pdistBC_v",
-                                "kind": "OMS"
-                            }
-                        ],
-                        "kind": "OMA"
-                    }
-                },
-                "df": null
-            },
-            {
-                "uri": "http://mathhub.info/FrameIT/frameworld?OppositeLen_Problem?pangleABC_v",
-                "label": "pangleABC_v",
-                "tp": {
-                    "original": {
-                        "uri": "http://mathhub.info/MitM/Foundation?RealLiterals?real_lit",
-                        "kind": "OMS"
-                    },
-                    "simplified": {
-                        "uri": "http://mathhub.info/MitM/Foundation?RealLiterals?real_lit",
-                        "kind": "OMS"
-                    }
-                },
-                "df": null
-            },
-            {
-                "uri": "http://mathhub.info/FrameIT/frameworld?OppositeLen_Problem?pangleABC",
-                "label": "pangleABC",
-                "tp": {
-                    "original": {
-                        "applicant": {
-                            "uri": "http://mathhub.info/FrameIT/frameworld?AngleFact?angleFact",
-                            "kind": "OMS"
-                        },
-                        "arguments": [
-                            {
-                                "uri": "http://mathhub.info/FrameIT/frameworld?OppositeLen_Problem?pA",
-                                "kind": "OMS"
-                            },
-                            {
-                                "uri": "http://mathhub.info/FrameIT/frameworld?OppositeLen_Problem?pB",
-                                "kind": "OMS"
-                            },
-                            {
-                                "uri": "http://mathhub.info/FrameIT/frameworld?OppositeLen_Problem?pC",
-                                "kind": "OMS"
-                            },
-                            {
-                                "uri": "http://mathhub.info/FrameIT/frameworld?OppositeLen_Problem?pangleABC_v",
-                                "kind": "OMS"
-                            }
-                        ],
-                        "kind": "OMA"
-                    },
-                    "simplified": {
-                        "applicant": {
-                            "uri": "http://mathhub.info/FrameIT/frameworld?AngleFact?angleFact",
-                            "kind": "OMS"
-                        },
-                        "arguments": [
-                            {
-                                "uri": "http://mathhub.info/FrameIT/frameworld?OppositeLen_Problem?pA",
-                                "kind": "OMS"
-                            },
-                            {
-                                "uri": "http://mathhub.info/FrameIT/frameworld?OppositeLen_Problem?pB",
-                                "kind": "OMS"
-                            },
-                            {
-                                "uri": "http://mathhub.info/FrameIT/frameworld?OppositeLen_Problem?pC",
-                                "kind": "OMS"
-                            },
-                            {
-                                "uri": "http://mathhub.info/FrameIT/frameworld?OppositeLen_Problem?pangleABC_v",
-                                "kind": "OMS"
-                            }
-                        ],
-                        "kind": "OMA"
-                    }
-                },
-                "df": null
-            },
-            {
-                "uri": "http://mathhub.info/FrameIT/frameworld?OppositeLen_Problem?pangleBCA",
-                "label": "pangleBCA",
-                "tp": {
-                    "original": {
-                        "applicant": {
-                            "uri": "http://mathhub.info/FrameIT/frameworld?AngleFact?angleFact",
-                            "kind": "OMS"
-                        },
-                        "arguments": [
-                            {
-                                "uri": "http://mathhub.info/FrameIT/frameworld?OppositeLen_Problem?pB",
-                                "kind": "OMS"
-                            },
-                            {
-                                "uri": "http://mathhub.info/FrameIT/frameworld?OppositeLen_Problem?pC",
-                                "kind": "OMS"
-                            },
-                            {
-                                "uri": "http://mathhub.info/FrameIT/frameworld?OppositeLen_Problem?pA",
-                                "kind": "OMS"
-                            },
-                            {
-                                "float": 90.0,
-                                "kind": "OMF"
-                            }
-                        ],
-                        "kind": "OMA"
-                    },
-                    "simplified": {
-                        "applicant": {
-                            "uri": "http://mathhub.info/FrameIT/frameworld?AngleFact?angleFact",
-                            "kind": "OMS"
-                        },
-                        "arguments": [
-                            {
-                                "uri": "http://mathhub.info/FrameIT/frameworld?OppositeLen_Problem?pB",
-                                "kind": "OMS"
-                            },
-                            {
-                                "uri": "http://mathhub.info/FrameIT/frameworld?OppositeLen_Problem?pC",
-                                "kind": "OMS"
-                            },
-                            {
-                                "uri": "http://mathhub.info/FrameIT/frameworld?OppositeLen_Problem?pA",
-                                "kind": "OMS"
-                            },
-                            {
-                                "float": 90.0,
-                                "kind": "OMF"
-                            }
-                        ],
-                        "kind": "OMA"
-                    }
-                },
-                "df": null
-            }
-        ]
+      "problemTheory": /* MMT URI as JSON string */,
+      "solutionTheory": /* MMT URI as JSON string */
     }
-]
-``` 
+    ```
+  
+    Format only given for informational purposes, the game engine should treat scroll reference objects opaquely.
+    Do not depend on their internal structure. 
+
+  </details>
+
+- <details><summary>Scroll JSON format (shared by endpoints below)</summary>
+
+    ```javascript
+    {
+      "ref": /* scroll reference */,
+      "label": "some label",
+      "description": "some description",
+      "requiredFacts": /* array of facts */
+    }
+    ```
+
+  </details>
+
+- <details><summary>Scroll Application format (shared by endpoints below)</summary>
+
+    ```javascript
+    {
+      "scroll": /* scroll reference */,
+      "assignments": [
+        ["ref": /* fact reference */, /* OMDoc JSON term (the assignment) */],
+        /* ... more elements (same syntax) */
+      ]
+    }
+    ```
+
+  </details>
+
+- <details><summary><code>POST /fact/add</code>: make a new fact known to the server</summary>
+
+  - payload: a fact JSON object as detailled above without the "ref" field
+  - return value: a fact reference JSON object
+
+  </details>
+
+- <details><summary><code>GET /fact/list</code>: retrieve all facts known to the server</summary>
+
+  - payload: none
+  - return value: a JSON array containing fact JSON objects
+
+  </details>
+
+- <details><summary><code>GET /scroll/list</code>: retrieve all scrolls known to the server</summary>
+
+  - payload: none
+  - return value: a JSON array containing scroll JSON objects
+
+  </details>
+
+- <details><summary><code>POST /scroll/apply</code>: apply (i.e. use) a scroll and add acquired facts to situation theory</summary>
+
+  - payload: none
+  - return value: a JSON array containing scroll JSON objects
+  </details>
+
+
+## Internal REST API
+
+- <details><summary><code>GET /debug/situationtheory/print</code>: output a stringification of the situation theory (and included theories) known to the server</summary>
+
+  - payload: none
+  - return value: a JSON string containing MMT surface syntax (probably unparsable by MMT; for human consumption only)
+
+  </details>
 
 ## License
 
